Fixing spacing issue

--- a/base_theme/static/scss/scss/layout/_footer.scss
+++ b/base_theme/static/scss/scss/layout/_footer.scss
@@ -160,6 +160,7 @@
 				text-align: left;
 				padding-top: 0px;
 				padding-right: 0px;
+				padding-left: 15px;
 			}
 			@include small {
 				@include font-size(12px);
